# ControlsLearning

./: .gitignore  .gitmodules  Encoder.py  GeneralController.py  LeadLag.py  Motor.py  PIDController.py  import control
AppliedNonlinearControls_Tests/LimitCycles/: drawPhasePortrait.m  limitcycle.m
Built/ExcavatorModel/: body.m  link_snake.m
CrackingCodingInterview/: Ch4_Ex12.cpp  solution
DiatomCodingTest/: README.txt  Writeup.docx  classifyWalk.py  loadData.py  main.py  walkData1.csv  walkData2.csv
NuroCodingTest/: coding_test.cpp  prog
Pendulum/: PendulumVis.py
SLAM_Cpp/: .gitignore
SLAM_Cpp/Cpp/Unit_A/: CMakeLists.txt  Makefile  cmake_install.cmake  slam_01_a_plot_motor_ticks  slam_01_a_plot_motor_ticks.cpp  slam_01_a_plot_motor_ticks.py  slam_01_b_print_motor_increments  slam_01_b_print_motor_increments.cpp  slam_01_c_plot_motor_increments.py  slam_02_a_filter_motor_question  slam_02_a_filter_motor_question.cpp  slam_02_a_filter_motor_question.py  slam_02_b_filter_motor_question  slam_02_b_filter_motor_question.cpp  slam_02_b_filter_motor_question.py  slam_03_a_plot_scan  slam_03_a_plot_scan.cpp  slam_03_b_scan_derivative_question  slam_03_b_scan_derivative_question.cpp  slam_03_c_find_cylinders_question  slam_03_c_find_cylinders_question.cpp  slam_03_d_find_cylinders_cartesian_question  slam_03_d_find_cylinders_cartesian_question.cpp
SLAM_Cpp/Cpp/Unit_B/: CMakeLists.txt  Makefile  cmake_install.cmake  slam_04_a_project_landmarks.cpp  slam_04_b_find_cylinder_pairs_question.cpp  slam_04_c_estimate_transform_question.cpp  slam_04_d_apply_transform_question.cpp  slam_05_a_find_wall_pairs_question.cpp
SLAM_Cpp/Cpp/util/: CMakeLists.txt  Makefile  cmake_install.cmake  constants.h  landmark_handler.cpp  landmark_handler.h  lego_robot_log_file.cpp  lego_robot_log_file.h  lego_robot_model.cpp  lego_robot_model.h  lego_robot_scan_handler.cpp  lego_robot_scan_handler.h  output_formatting.cpp  output_formatting.h  spatial_classes.cpp  spatial_classes.h
SpringMass/: SpringMass.py
Walker/: draw_link.m  four_bar_linkage.m  link.m  test_leg.m  test_leg.m~
underactuated/: traj_opt_test.py
(+10481 files in other folders)
